--- a/aktif-odev2.html/page2.html
+++ b/aktif-odev2.html/page2.html
@@ -27,27 +27,26 @@
             <input type="number" id="unitPrice" name="unitPrice">
         </div>
         <div class="form-element">
-            <label for="stock">Stock:</label>
-            <input type="number" id="stock" name="stock">
+            <label for="unitsInStock">Stock:</label>
+            <input type="number" id="unitsInStock" name="unitsInStock">
         </div>
         <button type="submit" onclick="addProduct()">Add</button>
     </form>
 
     <script>
-        function addProduct () {
-            // Get input values
-            var name = document.getElementById("name").value;
-            var unitPrice = document.getElementById("unitPrice").value;
-            var stock = document.getElementById("stock").value;
-            const form = document.getElementById('productForm');
+         document.addEventListener("DOMContentLoaded", function () {
 
-            //
+            const form = document.getElementById('productForm');
             form.addEventListener('submit', function(event) {
+                // Get input values
+                var name = document.getElementById("name").value;
+                var unitPrice = document.getElementById("unitPrice").value;
+                var unitsInStock = document.getElementById("unitsInStock").value;
+                
                 event.preventDefault(); // Prevent the default form submission
 
                 const formData = new FormData(form); // Serialize form data into FormData object
-
-                axios.post('https://northwind.vercel.app/api/product', formData)
+                axios.post('https://northwind.vercel.app/api/products', { name, unitPrice, unitsInStock })
                     .then(function(response) {
                         console.log('Response:', response.data);
                     })
@@ -55,7 +54,7 @@
                         console.error('Error:', error);
                     });
             });
-        }
+        })
     </script>
 </body>
 </html>
